--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,21 +2,24 @@ project:
   type: website
 
 website:
-  title: "Bernat's Blog"
+  title: "Bernat Puig Camps"
+  favicon: profile.jpg
   navbar:
-    title: false
-    left:
-      - text: Home
-        href: index.html
-      # - text: About
-      #   href: about.html
+    menu: false
+    logo: "profile.jpg"
+    title: "Bernat Puig Camps"
     right:
-      - text: 🌓
+      - icon: linkedin
+        href: https://linkedin.com/in/bepuca/
+      - icon: github
+        href: https://github.com/bepuca
+
 format:
   html:
     theme:
-      light: cosmo
-      dark: [cosmo, theme-dark.scss]
+      light: [default, theme.scss]
+      dark: [default, theme-dark.scss]
+    highlight-style: ayu
     css: styles.css
 
 
